[project]
name = "dsp-sq-causal"
version = "0.1.0"
description = "Exploring causal inference methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "black",
    "pytest",
    "pre-commit",
    # Data Science Core Dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Visualisation Dependencies
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    # Jupyter Environment
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    # Statistical Analysis
    "statsmodels>=0.14.0",
    "pip>=25.2",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B"]
exclude = ["__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
